--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,14 @@
   body {
     background-color: rgb(15 23 42);
   }
+
+  .App {
+    text-align: center;
+    background-color: #0f172a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+  }
 }
